--- a/src/styles/HomeStyle.css
+++ b/src/styles/HomeStyle.css
@@ -94,6 +94,28 @@
   color: #505050;
 }
 
+.aboutusimage {
+  height: 75vh;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.contactimage {
+  height: 75vh;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 /* mobile responsive code  */
 @media only screen and (max-width: 600px) {
   .bannerContainer1 {
